# 3DPointCloud-IterativeClosestPoint

./: README.md  setup.bat  setup.sh
IGLFramework/: CMakeLists.txt  Doxyfile
IGLFramework/docs/html/: annotated_dup.js  classacq_1_1_cloud_manager.js  classacq_1_1_decorated_cloud-members.html  classacq_1_1_decorated_cloud.html  classacq_1_1_decorated_cloud.js  classes.html  dir_000003_000000.html  dir_46907d7260ae940fa09cacf7a7962390.html  dir_46907d7260ae940fa09cacf7a7962390.js  dir_46907d7260ae940fa09cacf7a7962390_dep.md5  dir_4a8633746e1c57e30a1f3538ba6eb348.html  dir_4a8633746e1c57e30a1f3538ba6eb348.js  dir_4a8633746e1c57e30a1f3538ba6eb348_dep.map  dir_4a8633746e1c57e30a1f3538ba6eb348_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  functions.html  functions_func.html  globals_func.html  graph_legend.html  index.html  main_8cpp.js  main_8cpp__incl.map  modules.html  modules.js  namespaceacq.html  namespaceacq.js  namespacemembers_type.html  namespaces.html  navtreedata.js  navtreeindex0.js  normal_estimation_8cpp.html  normal_estimation_8cpp.js  normal_estimation_8cpp__incl.md5  normal_estimation_8cpp_source.html  normal_estimation_8h__incl.map  normal_estimation_8h__incl.md5  normal_estimation_8hpp.html  (+4 more)
IGLFramework/docs/html/search/: all_1.js  all_4.js  all_5.js  all_7.js  all_a.js  all_b.js  classes_0.js  classes_1.js  functions_0.js  functions_2.js  typedefs_0.js  typedefs_2.js
IGLFramework/include/: submain.h
IGLFramework/include/acq/: decoratedCloud.h  myicp.h  normalEstimation.h  typedefs.h
IGLFramework/src/: cloudManager.cpp  cw1.hpp  main.cpp  myicp copy.cpp  myicp.cpp  normalEstimation.cpp  submain.cpp
docs/html/: annotated.html  classacq_1_1_cloud_manager-members.html  classacq_1_1_cloud_manager.html  dir_46907d7260ae940fa09cacf7a7962390_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  functions_vars.html  globals.html  group___normal_estimation.html  group___normal_estimation.js  main_8cpp.html  main_8cpp__incl.md5  main_8cpp_source.html  namespacemembers.html  namespacemembers_func.html  namespaces.js  normal_estimation_8cpp__incl.map  normal_estimation_8h.html  normal_estimation_8h.js  normal_estimation_8h__dep__incl.map  normal_estimation_8h__dep__incl.md5  normal_estimation_8h_source.html  normal_estimation_8hpp.js  normal_estimation_8hpp__dep__incl.map  normal_estimation_8hpp__incl.map  normal_estimation_8hpp__incl.md5  normal_estimation_8hpp_source.html  typedefs_8h__dep__incl.map  typedefs_8h__dep__incl.md5  typedefs_8h__incl.map  typedefs_8h__incl.md5
docs/html/search/: all_2.js  all_3.js  all_8.js  files_1.js  functions_1.js  functions_4.js  functions_6.js  groups_0.js  namespaces_0.js  searchdata.js  variables_0.js
include/acq/: cloudManager.h  icpBasic.h  icpMultimesh.h  icpNormal.h  icpSubSampled.h  myicp.h  nearestNeighbour.h  normalEstimation.h
include/acq/impl/: cloudManager.hpp  decoratedCloud.hpp  normalEstimation.hpp
src/: ICPBasic.cpp  cloudManager.cpp  decoratedCloud.cpp  icpBasic.cpp  icpMultimesh.cpp  icpNormal.cpp  icpSubsampled.cpp  main.cpp  nearestNeighbour.cpp
